--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: 
   numeric_keyboard: 
-  firebase_core: ^1.7.0
-  firebase_auth: ^3.1.4
+  firebase_core:
+  firebase_auth:
   cloud_firestore: 
   font_awesome_flutter: 
   provider: ^6.0.1
   oktoast:  
-  google_sign_in: ^5.2.1
+  google_sign_in:
   date_picker_timeline:
   intl: 
   http:
